--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "expo": "~48.0.9",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "expo-secure-store": "~12.1.1"
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
