--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
+    "date-fns": "^2.30.0",
     "expo": "~48.0.9",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "~12.1.2",
